--- a/frontendProyecto/src/assets/css/navStyle.css
+++ b/frontendProyecto/src/assets/css/navStyle.css
@@ -6,7 +6,7 @@ nav {
   justify-content: space-around;
 }
 .buscador{
-  width: 20rem;
+  width: 30rem;
   text-align: center;
   border-radius: 2rem;
 }
@@ -16,13 +16,24 @@ nav {
 nav a{
   text-decoration: none;
   color: red;
+  padding: 5px;
 }
 .opciones{
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  width: 15rem;
+  width: 25rem;
 }
 .notActive{
   color: black;
+}
+.perfil{
+  border: solid 1px black;
+  width: 5rem;
+  text-align: center;
+  border-radius: 1rem;
+}
+.cerrarSesion{
+  border: solid 1px black;
+  border-radius: 1rem;
 }
