--- a/frontendProyecto/src/assets/css/navStyle.css
+++ b/frontendProyecto/src/assets/css/navStyle.css
@@ -1,14 +1,18 @@
 nav {
   height: 7rem;
-  border: solid 1px black;
+  border: solid 1px #0d5e48;
+  border-left: none;
+  border-right: none;
   display: flex;
   align-items: center;
   justify-content: space-around;
+  background-color: #d4edda;
 }
 .buscador{
   width: 30rem;
   text-align: center;
   border-radius: 2rem;
+  border: solid 1px #0d5e48;
 }
 .icono{
   color: black;
