--- a/frontendProyecto/src/assets/css/LoginFromStyle.css
+++ b/frontendProyecto/src/assets/css/LoginFromStyle.css
@@ -9,6 +9,14 @@
   padding-bottom: 20%;
 }
 
+.containerForm2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f5f5f5;
+}
+
 .form {
   background-color: #fff;
   padding: 2rem;
