--- a/frontendProyecto/src/assets/css/cardGaleriaStyle.css
+++ b/frontendProyecto/src/assets/css/cardGaleriaStyle.css
@@ -9,7 +9,7 @@
   width: 100%;
 }
 .imagenCard{
-  height: 100%;
+  height: 15rem;
   object-fit: contain;
 }
 .list-group{
@@ -24,4 +24,11 @@
   background-color: #3cd1a9;
   border: solid 1px #0d5e48 ;
   border-radius: 1rem;
+}
+.list-group-flush{
+  overflow-y: scroll;
+  height: 10rem;
+}
+.list-group-item{
+  height: 10rem;
 }
